--- a/outcome distribution.ipynb
+++ b/outcome distribution.ipynb
@@ -354,6 +354,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in dct[\"Collected\"]:\n",
+    "    print(i[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [
@@ -385,151 +403,6 @@
     "plt.xticks(rotation=-45)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Full Payment         60286\n",
-       "Credit Collection    59010\n",
-       "Dismissed             2060\n",
-       "Unresolved           29010\n",
-       "Name: 0, dtype: int64"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove the index column\n",
-    "\n",
-    "df_bar.loc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def outcome_visualization_2(df, outcomes_labels, lst_of_predicates):\n",
-    "    values = []\n",
-    "    labels = []\n",
-    "    filtered_dataframes = []\n",
-    "    overlap_check = []\n",
-    "    for i in range(len(outcomes_labels)):\n",
-    "        \n",
-    "        df[outcomes_labels[i]] = df.apply(lst_of_predicates[i], axis=1)\n",
-    "        filtered_dataframes.append(df.loc[df[outcomes_labels[i]] == True, ['case_id']])\n",
-    "\n",
-    "        \n",
-    "        values.append([len(filtered_dataframes[i])])\n",
-    "    #print(values)\n",
-    "    # we create an additional dataframe called unresolved which is the difference between all the filtered dataframes combined and the input dataframe\n",
-    "    #unresolved = df.loc[~df['case_id'].isin(filtered_dataframes[0]['case_id']) & ~df['case_id'].isin(filtered_dataframes[1]['case_id']), ['case_id']]\n",
-    "    for l in range(len(filtered_dataframes)):\n",
-    "        if l == 0:\n",
-    "            unresolved = df.loc[~df['case_id'].isin(filtered_dataframes[l]['case_id']), ['case_id']]\n",
-    "        else:\n",
-    "            unresolved = unresolved.loc[~unresolved['case_id'].isin(filtered_dataframes[l]['case_id']), ['case_id']]\n",
-    "    \n",
-    "    #print(len(unresolved))\n",
-    "    #print(len(df))\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # we check the overlap between the outcomes\n",
-    "    # Create an empty defaultdict with list as default value\n",
-    "    dct = defaultdict(list)\n",
-    "\n",
-    "    # Loop over the list and append the combinations to the dictionary\n",
-    "    for i in range(len(outcomes_labels)):\n",
-    "        for j in range(i+1, len(outcomes_labels)):\n",
-    "            dct[outcomes_labels[i]].append(outcomes_labels[j])\n",
-    "            overlap_check.append(len(pd.merge(filtered_dataframes[i], filtered_dataframes[j], how='inner', on=['case_id'])))\n",
-    "\n",
-    "    # Convert the defaultdict to a regular dict\n",
-    "    dct = dict(dct)\n",
-    "    k = 0 # index for values\n",
-    "    for key, value in dct.items():\n",
-    "        \n",
-    "        for i in range(len(value)):\n",
-    "            \n",
-    "            value[i] = (value[i], overlap_check[k]) # make a tuple of string and value\n",
-    "            k += 1 # increment index\n",
-    "    print(dct)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # Create a dictionary with the colors for each variable\n",
-    "    colors = {\"Full Payment\": \"limegreen\", \"Dismissed\": \"royalblue\", \"Credit Collection\": \"navajowhite\", \"Unresolved\": \"plum\"}\n",
-    "\n",
-    "    # Create a pandas DataFrame with your data\n",
-    "    data = {\"Full Payment\": values[0],  \"Credit Collection\": values[1], \"Dismissed\": values[2], \"Unresolved\": values[4]}\n",
-    "    df_bar = pd.DataFrame(data)\n",
-    "\n",
-    "    # Create the bar chart\n",
-    "    sns.barplot(data=df_bar, palette=colors)\n",
-    "\n",
-    "    # Set the y labels\n",
-    "    #plt.yticks([0, 4, 2072, 29041, 59010, 60243])\n",
-    "    #plt.yticks([0, 4, 2072, 29041, 59010, 60243], [\"0\", \"10\", \"20\", \"30\", \"40\", \"50\"])\n",
-    "    # Set the background color\n",
-    "    sns.set_style(\"whitegrid\")\n",
-    "\n",
-    "    # change font size of y axis and x axis\n",
-    "    plt.yticks(fontsize=14)\n",
-    "    plt.xticks(fontsize=14)\n",
-    "\n",
-    "    plt.xticks(rotation=-45)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Fully Paid': [('Collected', 3), ('Dismissed', 1)], 'Collected': [('Dismissed', 0)]}\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_53076\\3114073681.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moutcome_visualization_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_outcome\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutcomes_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlst_of_predicates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_53076\\65311155.py\u001b[0m in \u001b[0;36moutcome_visualization_2\u001b[1;34m(df, outcomes_labels, lst_of_predicates)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;31m# Create a pandas DataFrame with your data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"Full Payment\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;34m\"Credit Collection\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Dismissed\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Unresolved\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[0mdf_bar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "outcome_visualization_2(df_outcome, outcomes_labels, lst_of_predicates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
